<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="50sp"
        android:freezesText="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/edit_text_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/EnterText"/>
        <Button
            android:id="@+id/button_edit_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Edit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        >

        <ImageView
            android:id="@+id/Photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/def" />

        <Button
            android:id="@+id/Camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/Photo" />

    </LinearLayout>

    <EditText
        android:id="@+id/twit_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterTwit"
        android:layout_weight="0.5" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Share" />

</LinearLayout>

